tests/errors/lex13.kt
fun main() {
    val a = @
    val b = $
    val c = `
}